Updated the make files to include the LUFA defines so the USB information is stored in the correct program memory location

--- a/Lab1-Serial/makefile
+++ b/Lab1-Serial/makefile
@@ -81,6 +81,13 @@ CDEFS += -DF_USB=$(F_USB)
 CDEFS += -DBOARD=BOARD_$(BOARD) -DARCH=ARCH_$(ARCH)
 CDEFS += -DDEVICE_VID=$(VID)
 CDEFS += -DDEVICE_PID=$(PID)
+
+LUFA_OPTS = -DUSE_STATIC_OPTIONS=0 \
+            -DUSB_DEVICE_ONLY \
+            -DUSE_FLASH_DESCRIPTORS \
+            -DFIXED_CONTROL_ENDPOINT_SIZE=8 \
+            -DFIXED_NUM_CONFIGURATIONS=1 \
+            -DINTERRUPT_CONTROL_ENDPOINT
 CDEFS += $(LUFA_OPTS)
 
 # Define all object files.
