Updated to incorporate MEGN540_MessageHandeling.h/c

--- a/Lab1-Serial/makefile
+++ b/Lab1-Serial/makefile
@@ -21,6 +21,8 @@ TARGET       = Lab1
 # List C source files here. (C dependencies are automatically generated.)
 SRC = $(TARGET).c       \
 	$(MEGN_C_LIB_PATH)/SerialIO.c			\
+	$(MEGN_C_LIB_PATH)/Ring_Buffer.c		\
+	$(MEGN_C_LIB_PATH)/MEGN540_MessageHandeling.c\
 	$(MEGN_C_LIB_PATH)/USB_Config/Descriptors.c       \
 	$(LUFA_SRC_USB)
 
