--- a/Lab4-MotorPWM/Makefile
+++ b/Lab4-MotorPWM/Makefile
@@ -26,6 +26,7 @@ SRC = $(TARGET).c       \
 	$(MEGN_C_LIB_PATH)/Timing.c				\
 	${MEGN_C_LIB_PATH}/Encoder.c \
 	${MEGN_C_LIB_PATH}/MotorPWM.c\
+	${MEGN_C_LIB_PATH}/Battery_Monitor.c \
 	$(MEGN_C_LIB_PATH)/USB_Config/Descriptors.c       \
 	$(LUFA_SRC_USB)
 
