updated for watchdog functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,10 @@
                 ".chrome",
                 "lufa",
                 "BIN"
-        ]
+        ],
+        "files.associations": {
+                "lab1_tasks.h": "c",
+                "serialio.h": "c",
+                "ring_buffer.h": "c"
+        }
 }
