vscode changed settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
                 ".chrome",
                 "lufa",
                 "BIN"
-        ]
+        ],
+        "ros.distro": "noetic"
 }
